CREATE TABLE role (
      role_id uuid PRIMARY KEY,
      role_default_name text NOT NULL
);