package models

// Service модель User
type User struct {
	UserID   string
	Username string
	Email    string
	Role     string
}
